# metopus-product-case-study

./: .gitignore  NOTICE.md  PUBLICATION_CHECKLIST.md  README.md
.github/workflows/: demo-ci.yml
assets/diagrams/: README.md
assets/screenshots/: README.md
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/fixtures/: culture.json
demo/rust/: Cargo.toml
demo/rust/src/: layout.rs  lib.rs  transition.rs
demo/src/: App.tsx  styles.css
demo/src/components/: ControlBar.tsx  CultureCanvas.tsx  InspectorPanel.tsx
demo/src/domain/: culture-contract.test.ts  culture-contract.ts  view-model.test.ts  view-model.ts
demo/src/engine/: wasm-adapter.ts
demo/src/hooks/: use-culture-layout.ts  use-element-size.ts
docs/: 00-executive-summary.md  01-product-overview.md  02-public-architecture.md  03-role-and-implementation.md  04-ai-assisted-development-workflow.md  05-confidentiality-boundaries.md  06-selected-implementation-map.md  07-testing-and-device-coverage.md  08-screenshots-and-walkthrough.md  09-public-diagrams.md  10-public-walkthrough-script.md  11-recording-script-and-shot-list.md
