[package]
name = "metopus-culture-demo-engine"
version = "0.1.0"
edition = "2021"
description = "Public-safe layout engine for the Metopus Culture/Scene portfolio demo"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
